--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "build-normal",
       "type": "shell",
-      "command": "${workspaceRoot}/qawno/pawncc.exe",
+      "command": "${workspaceRoot}/pawno/pawncc.exe",
       "args": ["${file}", "--%", "-Dgamemodes", "-;+", "-(+", "-d3"],
       "group": {
         "kind": "build",
